# posts-trending-crawler

./: .env.example  .gitignore  Dockerfile.api  QWEN.md  README.md  index.html  package.json  pyproject.toml
configs/: crawler.yaml  keywords.txt  sources.yaml
data/: dcard_crawler.db
data/browser_profile/: Local State
data/browser_profile/Default/: Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Top Sites  (+3 more)
data/raw/: crawl_summary.json  crawled_post_links.json  debug_page.html  page_content_sample.txt  post_261244620.json  post_261244838.json  post_261245457.json  post_261248439.json  post_261249775.json
demo-app/: index.html  package.json
demo-app/src/: main.js
docs/demo/: verification-manifest.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/scripts/: prepare-preview-base.mjs
frontend/src/: App.tsx  main.tsx
research/: antibot_research.md  endpoint_notes.md  poc_results.md
scripts/: crawl_advanced_stealth.py  crawl_manual_captcha.py  crawl_with_persistent_browser.py  poc_api_test.py  poc_browser_discovery.py  poc_persistent_browser.py  poc_real_browser_crawl.py  solve_captcha.py  solve_captcha_and_save_cookies.py  verify_portfolio_ui.py
src/dcard_crawler/: __init__.py  cli.py  database.py  logging_config.py  models.py  schemas.py  settings.py
src/dcard_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_analysis.py  test_api.py  test_cli.py  test_connector_ingest_service.py  test_connectors.py  test_core_http_client.py  test_core_policy.py  test_core_rate_limiter.py  test_core_robots.py  test_core_utils.py  test_crawl_job_repository.py  test_database_schema.py  test_dcard_diagnostics.py  test_ingest_service.py  test_live_verification.py  test_news_connector.py  test_parser.py  test_ptt_connector.py  test_quality.py  test_repositories.py  test_service_factory.py  test_source_catalog_batch.py
(+1137 files in other folders)
